@@ -1,3 +1,6 @@
+2007-12-21 Gary Burton <gary.burton@zen.co.uk>
+	* src/ScratchPad.py: allow items to be moved, feature #1465
+
 2007-12-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/DataViews/_PersonView.py: pass create_quickreport uistate
 	* src/Editors/_EditPrimary.py: pass create_quickreport uistate
